feat(annotation-processor): enhance `@EnumHelper`'s `AS_MAP` on Java 9+